Header grotendeels af

--- a/index.html
+++ b/index.html
@@ -5,11 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Roboto:wght@100;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Roboto:wght@100;400&display=swap"
+          rel="stylesheet">
     <link rel="stylesheet" href="./styles/styles.css">
-    <title>Title</title>
+    <title>Rekupe</title>
 </head>
 <body>
+
+<header>
+    <nav class="nav-bar">
+        <a href="index.html/#case-studies">Case Studies</a>
+        <a href="index.html/#services">Services</a>
+        <a href="index.html/#contact-us">Contact Us</a>
+    </nav>
+    <section class="hero-section outer-container">
+        <div class="inner-container">
+            <h1>Your website is an investment in the success of your business.</h1>
+            <p>We are here to help you succeed.</p>
+            <button type="submit">Let's work together</button>
+        </div>
+    </section>
+</header>
+
+<main>
+    <section class="introduction outer-container">
+        <div class="inner-container">
+            <h4>Rekupe is a digital agency in Los Angeles.</h4>
+            <h4>We use strategic UX, SEO optimization and beautiful visual designs to help your business grow.</h4>
+            <h4>We see every project as a fresh opportunity, pushing ourselves to create new digital experiences.</h4>
+            <p>Have a question? <a href="">Click here</a> to contact us!</p>
+        </div>
+    </section>
+</main>
+
 
 </body>
 </html>
