--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <p>We are here to help you succeed.</p>
             <button type="submit">Let's work together</button>
         </div>
+        <div class="header-symbol-1"></div>
     </section>
 </header>
 
