Section met images wrapper werkend gekregen

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <header>
     <nav class="nav-bar">
-        <a href="index.html/#case-studies">Case Studies</a>
-        <a href="index.html/#services">Services</a>
-        <a href="index.html/#contact-us">Contact Us</a>
+        <a href="#case-studies">Case Studies</a>
+        <a href="#services">Services</a>
+        <a href="#contact-us">Contact Us</a>
     </nav>
     <section class="hero-section outer-container">
         <div class="inner-container">
@@ -36,6 +36,19 @@
             <h4>We see every project as a fresh opportunity, pushing ourselves to create new digital experiences.</h4>
             <p>Have a question? <a href="">Click here</a> to contact us!</p>
         </div>
+    </section>
+    <section class="projects outer-container-projects" id="case-studies">
+        <article class="inner-container-projects">
+            <div class="text-wrapper">
+                <h3>Rolling Stone</h3>
+                <div></div>
+                <p>You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global icon.</p>
+                <a href="">view project</a>
+            </div>
+            <span class="image-wrapper">
+                <img src="./assets/images/work-image-01.jpeg" alt="Work image one">
+            </span>
+        </article>
     </section>
 </main>
 
