Het projects gedeelte van de main is werkend en af, tijd voor bed

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p>We are here to help you succeed.</p>
             <button type="submit">Let's work together</button>
         </div>
-        <div class="header-symbol-1"></div>
+        <div class="header-symbol"></div>
     </section>
 </header>
 
@@ -41,12 +41,34 @@
         <article class="inner-container-projects">
             <div class="text-wrapper">
                 <h3>Rolling Stone</h3>
-                <div></div>
+                <div class="project-symbol"></div>
                 <p>You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global icon.</p>
                 <a href="">view project</a>
             </div>
             <span class="image-wrapper">
                 <img src="./assets/images/work-image-01.jpeg" alt="Work image one">
+            </span>
+        </article>
+        <article class="inner-container-projects">
+            <div class="text-wrapper">
+                <h3>Variety</h3>
+                <div class="project-symbol"></div>
+                <p>Variety is an industry leader for breaking entertainment news, reviews and box office results with archive of content dating back to 1905.</p>
+                <a href="">view project</a>
+            </div>
+            <span class="image-wrapper">
+                <img src="./assets/images/work-image-02.jpeg" alt="Work image two">
+            </span>
+        </article>
+        <article class="inner-container-projects">
+            <div class="text-wrapper">
+                <h3>Worth</h3>
+                <div class="project-symbol"></div>
+                <p>A global media platform connecting a community that embraces worth beyond wealth.</p>
+                <a href="">view project</a>
+            </div>
+            <span class="image-wrapper">
+                <img src="./assets/images/work-image-03.jpeg" alt="Work image three">
             </span>
         </article>
     </section>
