--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@
             <p>Have a question? <a href="">Click here</a> to contact us!</p>
         </div>
     </section>
+
     <section class="projects outer-container-projects" id="case-studies">
         <article class="inner-container-projects">
             <div class="text-wrapper">
                 <h3>Rolling Stone</h3>
                 <div class="project-symbol"></div>
-                <p>You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global icon.</p>
+                <p>You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global
+                    icon.</p>
                 <a href="">view project</a>
             </div>
             <span class="image-wrapper">
@@ -53,7 +55,8 @@
             <div class="text-wrapper">
                 <h3>Variety</h3>
                 <div class="project-symbol"></div>
-                <p>Variety is an industry leader for breaking entertainment news, reviews and box office results with archive of content dating back to 1905.</p>
+                <p>Variety is an industry leader for breaking entertainment news, reviews and box office results with
+                    archive of content dating back to 1905.</p>
                 <a href="">view project</a>
             </div>
             <span class="image-wrapper">
@@ -71,6 +74,54 @@
                 <img src="./assets/images/work-image-03.jpeg" alt="Work image three">
             </span>
         </article>
+    </section>
+
+    <section class="outer-container-services" id="services">
+        <div class="inner-container-services">
+            <article class="article-container">
+                <div class="icon-wrapper" id="icon-web-design"></div>
+                <h4>Web Design</h4>
+                <p>Good web design is how companies stand out from their competitors. High quality web design leads
+                    to increased user conversion and engagement. Through a proven web design process, we help
+                    clients launch websites and products that improve on their bottom line.</p>
+            </article>
+            <article class="article-container">
+                <div class="icon-wrapper" id="icon-web-development"></div>
+                <h4>Web Development</h4>
+                <p>Modern websites need to be responsive and fully functional at all sizes. We develop all of our sites
+                    with a mobile first approach and ensure that our code quality is clean, organized and performant.
+                    Already have a design but need it developed? We’re here to help!</p>
+            </article>
+            <article class="article-container">
+                <div class="icon-wrapper" id="icon-ux"></div>
+                <h4>User Experience</h4>
+                <p>In order to build successful products you have to understand the user. We create user personas,
+                    wireframes and prototypes to test with users. This allows us to gather feedback which helps to shape
+                    the product and can quickly eliminate potential risks – saving you time and money.</p>
+            </article>
+            <article class="article-container">
+                <div class="icon-wrapper" id="icon-design"></div>
+                <h4>Logo Design + Branding</h4>
+                <p>Nike, Apple, Coca-Cola, Starbucks. What do all of these brands have in common? Easily recognizable
+                    logos and brand identity. The best brands stand out from the crowd by having a clear and unique
+                    point of view. We will work with you to understand your vision and help create a unique brand
+                    identity and style guide for your company.</p>
+            </article>
+            <article class="article-container">
+                <div class="icon-wrapper" id="icon-seo"></div>
+                <h4>SEO</h4>
+                <p> Do you want your site to rank higher in search results? Google is constantly changing their
+                    algorithms for how they rank pages. Don’t worry about constantly playing catch-up. We will make sure
+                    your website it optimized, providing you the best opportunities for organic search exposure.</p>
+            </article>
+            <article class="article-container">
+                <div class="icon-wrapper" id="icon-copywriting"></div>
+                <h4>Copy Writing</h4>
+                <p>Brand messaging needs to be clear, direct and easy to understand to be effective. A unique tone of
+                    voice will help you stand out from the crowd and build brand loyalty. We work with you to establish
+                    your brand bible and ensure your messaging is focused and targeted.</p>
+            </article>
+        </div>
     </section>
 </main>
 
