Footer section gebouwd

--- a/index.html
+++ b/index.html
@@ -125,6 +125,15 @@
     </section>
 </main>
 
+<footer>
+    <section class="footer-section outer-container">
+        <div class="inner-container">
+            <h2>Let's work together</h2>
+            <p>Have a question? Need a quote? Let us know!</p>
+            <form></form>
+        </div>
+    </section>
+</footer>
 
 </body>
 </html>
