--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 </main>
 
 <footer>
-    <section class="footer-section outer-container-footer">
+    <section class="footer-section outer-container-footer" id="contact-us">
         <div class="inner-container-footer">
             <h2>Let's work together</h2>
             <p>Have a question? Need a quote? Let us know!</p>
@@ -142,6 +142,11 @@
 
                 <button type="submit">Send</button>
             </form>
+        </div>
+    </section>
+    <section class="outer-container-footer-bar">
+        <div class="inner-container-footer-bar">
+            Business website opdracht © NOVI Hogeschool 2022
         </div>
     </section>
 </footer>
