De schuine lijn is gemaakt

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <button type="submit">Let's work together</button>
         </div>
         <div class="header-symbol"></div>
+        <div class="triangle-container-top"></div>
     </section>
 </header>
 
@@ -35,6 +36,7 @@
             <h4>We use strategic UX, SEO optimization and beautiful visual designs to help your business grow.</h4>
             <h4>We see every project as a fresh opportunity, pushing ourselves to create new digital experiences.</h4>
             <p>Have a question? <a href="">Click here</a> to contact us!</p>
+            <div class="triangle-container-top"></div>
         </div>
     </section>
 
@@ -74,6 +76,7 @@
                 <img src="./assets/images/work-image-03.jpeg" alt="Work image three">
             </span>
         </article>
+        <div class="triangle-container-top"></div>
     </section>
 
     <section class="outer-container-services" id="services">
@@ -127,6 +130,7 @@
 
 <footer>
     <section class="footer-section outer-container-footer" id="contact-us">
+        <div class="triangle-container-bottom"></div>
         <div class="inner-container-footer">
             <h2>Let's work together</h2>
             <p>Have a question? Need a quote? Let us know!</p>
